--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,9 +5,9 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
-   <h1>Create a Basketball Team!</h1>
+   <h1>Basketball Team Signup</h1>
 
-    <form method="POST" action="/reverse">
+    <form method="POST" action="/team">
       <input type="text" name="string">  
       <input type="submit">
     </form>
